# bookstore

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py  test_order.py
order/serializers/: order_serializer.py  test_order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: test_category.py  test_product.py
product/serializers/: product_serializer.py  test_category_serializer.py  test_product_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
