[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Gabriel Andrade"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
django = ">=5.2,<6.0"
djangorestframework = ">=3.15.0,<4.0.0"
pytest = ">=9.0.2,<10.0.0"
factory-boy = ">=3.3.3,<4.0.0"
pytest-django = ">=4.12.0,<5.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=6.0,<7.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
flake8 = ">=7.0.0,<8.0.0"
gitpython = "^3.1.49"

[tool.poetry.group.dev.dependencies]
black = ">=25.0,<26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"